<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android-Sample-App</string>
    <string name="enter_username_label">Username</string>
    <string name="email_hint">Please enter your username</string>
    <string name="enter_password_label">Password</string>
    <string name="password_hint">Please enter your password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome %1$s</string>
    <string name="title_activity_main">Main Page</string>
    <string name="title_activity_show_item">%1$s</string>
    <string name="class_label">Class:</string>
    <string name="armament_label">Armaments:</string>
    <string name="defence_label">Defences:</string>
    <string name="size_label">Size:</string>

</resources>
