<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/enter_username_label"
        android:text="@string/enter_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/enter_username_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/enter_password_label"
        android:text="@string/enter_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_username"
        android:layout_alignEnd="@+id/enter_username_label"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/enter_password_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/enter_password"
        android:onClick="signIn"/>

</RelativeLayout>
